<resources>
    <!-- Login -->
    <string name="app_name">Senior Design</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- Payment -->
    <string name="make_a_payment">Make a Payment</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="payment_date">Payment Date</string>
    <string name="bank_account">Bank Account</string>
    <string name="submit">Submit</string>
</resources>
